--- a/question_1/question_1_1.ipynb
+++ b/question_1/question_1_1.ipynb
@@ -15,45 +15,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              height Mean  height std  weight mean  weight std\n",
-      "Product Code                                                  \n",
-      "LIF001_Y         10.26850    0.738092     382.8250    6.311333\n",
-      "LIF002_Y          8.18975    0.392228     523.7950    5.593230\n",
-      "LIF002_R          9.30775    0.773817     314.7225   14.875465\n",
-      "LIF001_B          8.94075    0.227376     384.9100    0.280000\n"
+      "              T_Height            T_Weight           \n",
+      "                  mean       std      mean        std\n",
+      "Product Code                                         \n",
+      "LIF001_B       8.94075  0.262551  384.9100   0.323316\n",
+      "LIF001_Y      10.26850  0.852276  382.8250   7.287700\n",
+      "LIF002_R       9.30775  0.893526  314.7225  17.176708\n",
+      "LIF002_Y       8.18975  0.452906  523.7950   6.458506\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import math\n",
     "###\n",
     "\n",
-    "measurements = pd.read_excel('files/question_1_2.xlsx', sheet_name='Measurements', skiprows=1)\n",
-    "specifications = pd.read_excel('files/question_1_2.xlsx', sheet_name='Specifications', skiprows=1)\n",
+    "measurements = pd.read_excel('../data/question_1_2.xlsx', sheet_name='Measurements', skiprows=1)\n",
+    "# Group by 'Product Code' and calculate mean and standard deviation\n",
+    "result = measurements.groupby(['Product Code'])[['T_Height', 'T_Weight']].agg(['mean', 'std'])\n",
     "\n",
-    "product_codes = set(measurements['Product Code'])\n",
-    "stats_dict = {}\n",
-    "for product_code in product_codes:\n",
-    "    height_mean = np.mean(measurements.loc[measurements['Product Code'] == product_code, 'T_Height'])\n",
-    "    height_std = np.std(measurements.loc[measurements['Product Code'] == product_code, 'T_Height'])\n",
-    "    weight_mean = np.mean(measurements.loc[measurements['Product Code'] == product_code, 'T_Weight'])\n",
-    "    weigth_std = np.std(measurements.loc[measurements['Product Code'] == product_code, 'T_Weight'])\n",
-    "    stats_dict[product_code] = [height_mean,height_std,  weight_mean, weigth_std]\n",
-    "stats_df = pd.DataFrame(stats_dict)\n",
-    "\n",
-    "stats_df.index = ['height Mean', 'height std', 'weight mean','weight std']\n",
-    "stats_df = stats_df.T\n",
-    "stats_df.index.name = 'Product Code'\n",
-    "print(stats_df)"
+    "# Print the result\n",
+    "print(result)\n"
    ]
   }
  ],
@@ -64,7 +52,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.6"
   }
  },
